# bis-transformer

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: commit_and_push.yml
aws/: ecs-task.template.json
conda/: enviroment.yml  environment.yaml
configs/: config.yaml
configs/mlflow/: aws.yaml  config.yaml  local.yaml
configs/model/: transformer.yaml
configs/prepare/: config.yaml  test_config.yaml
configs/sagemaker/: config.yaml
configs/train/: base.yaml
docker/: Dockerfile  mlflow-aws.Dockerfile  mlflow-local.Dockerfile
mlruns/0/: meta.yaml
mlruns/751688686107808424/: meta.yaml
mlruns/751688686107808424/0acc341ac8474a53b7030e0692e27c84/: meta.yaml
mlruns/751688686107808424/0f06243a47414a0f946de3e20204f6a3/: meta.yaml
scripts/: backup_mlflow_to_s3.py  backup_postgres_s3.sh  build_and_push_github.sh  build_and_push_mlflow.sh  build_and_push_sagemaker.sh  check_ecs_tasks.sh  cleanup_cluster.sh  evaluate.py  explain.py  full_training_workflow.sh  generate_ecs_from_template.py  generate_ecs_from_template.sh  launch_from_config.py  launch_training.py  predict.py  prepare_data.py  prepare_data_s3.sh  prepare_with_mlflow.py  restore_to_local_mlflow.py  start_ecs_mlflow.sh  train.py  train_sagemaker.sh  upload_data_s3.py  upload_data_s3.sh
src/bistransformer/: __init__.py
src/bistransformer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
terraform/: deploy.sh  destroy.sh  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
(+197 files in other folders)
